# PokerStrateg

./: README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/backend/: settings.py  urls.py
backend/fact_data/: apps.py  models.py  serializers.py  urls.py  views.py
backend/fact_data/migrations/: 0001_initial.py  0002_alter_positions_name_alter_hands_unique_together.py  0003_authors.py
backend/moves/: filters.py  models.py  serializers.py  urls.py  views.py
backend/moves/migrations/: 0001_initial.py  0002_remove_setup_hand_setup_current_move_setup_hands_and_more.py  0003_alter_moveset_name.py  0004_setup_author.py
frontend/: api.yaml  package-lock.json  package.json
frontend/src/: App.js  App.scss
frontend/src/api/: api.js
frontend/src/assets/: cards_sorted.js
frontend/src/components/Editor/: Editor.js
frontend/src/components/Editor/EditorComponents/Authors/: Authors.js
frontend/src/components/Editor/EditorComponents/Hands/: Hands.js
frontend/src/components/Editor/EditorComponents/Positions/: Positions.js
frontend/src/components/Editor/EditorComponents/Stacks/: Stacks.js
frontend/src/components/SetupsEditor/: SetupsEditor.js
frontend/src/components/SetupsEditor/SetupsEditorComponents/Diapasone/: Diapasone.js  Diapasone.scss
frontend/src/components/SetupsEditor/SetupsEditorComponents/MoveSets/: MoveSets.js
frontend/src/components/Situations/: Situation.js  Situations.scss
